Correcciones en el boton de whatsApp

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ data-vide-bg="video/particulas" data-vide-options="position: 0% 50%">
                     </div>
                 </div>
                 <div class="contacto__telefonos">
-                    <p class="icon-whatsapp"><span><a href="https://api.whatsapp.com/send?phone=543774511637" target="_blank">3774 511637</a></span></p>
+                    <a href="https://api.whatsapp.com/send?phone=543774511637" target="_blank"><p class="icon-whatsapp"><span>3774 511637</span></p></a>
                     <!--<p class="icon-fijo"><span>3774 480127</span></p>-->
                 </div>
             </div>
