--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
     <meta name="aplication-name" content="Radio Ciudad de Sauce 90.5 | Un lugar para todos">
     <link rel="stylesheet" href="iconos/style.css">
     <link rel="stylesheet" href="./style.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89562150-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-89562150-1');
+    </script>
+
     
 
     
