Actualizacion Comentarios Facebook

--- a/index.html
+++ b/index.html
@@ -94,14 +94,16 @@
         }(document, 'script', 'facebook-jssdk'));</script>
         
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
+    <!--<script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = 'https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.0&appId=1010211209001994&autoLogAppEvents=1';
       fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
+    }(document, 'script', 'facebook-jssdk'));</script>-->
+
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v10.0&appId=1010211209001994&autoLogAppEvents=1" nonce="NXlqs2hh"></script>
 
 
 
@@ -244,7 +246,7 @@
         <div class="l-container">
             <div class="footer__container">
                 <div class="footer__container--legal">
-                    <div>Radio Ciudad - Copyright (c) 2017 Copyright Holder All Rights Reserved. </div>
+                    <div>Radio Ciudad - Copyright (c) 2021 Copyright Holder All Rights Reserved. </div>
                 </div>
                 <div class="footer__container--powered">
                     <div class="footer__container--powered_by">
