--- a/test/index.html
+++ b/test/index.html
@@ -26,21 +26,21 @@
   coverimage: "https://i.imgur.com/t34G2eY.jpg", //link o ruta de logo radio
   onlycoverimage: "false", //true para mostrar solo logo radio
   coverstyle: "animated",
-  usevisualizer: "real",
+  usevisualizer: "fake",
   visualizertype: "7",
   metadatatechnic: "corsproxy",
   ownmetadataurl: "",
   usestreamcorsproxy: "false", //true o false
   corsproxy: "https://cors-anywhere.herokuapp.com/",
-  streamurl: "http://stream.zeno.fm/ef7d2011qtzuv.aac",
+  streamurl: "http://stream.zeno.fm/afnx6011qtzuv.aac",
   streamtype: "radiozeno", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
-  icecastmountpoint: "/radio.mp3",
-  shoutcastpath: "/stream",
+  icecastmountpoint: "",
+  shoutcastpath: "",
   shoutcastid: "",
   streamsuffix: "",
   radionomyid: "",
   radionomyapikey: "",
-  radiozenoid: "ef7d2011qtzuv",
+  radiozenoid: "afnx6011qtzuv",
   radiojarid: "",
   radiocoid: "",
   itunestoken: "1000lIPN",
