--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="l-container"></div>
         <header class="main-header">
             <div class="l-container flex">
-                <img class="logo" src="./img/logoAR.png" alt="Logo Radio Ciudad" /> 
+                <img class="logo" src="./img/logo.png" alt="Logo Radio Ciudad" /> 
                 <!--<div id="cont_9b00b0f8f9dec53d69373c2a13363046"><script type="text/javascript" async src="https://www.meteored.com.ar/wid_loader/9b00b0f8f9dec53d69373c2a13363046"></script></div>-->
 
                 <div class="social-media">
