Actualización estructura HTML

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
             <div class="live-radio">
                 <h3 class="live-radio__title" id="live">En vivo</h3>
                 <div class="live-radio__aire" id="programContainerElement">
-                
-                </div>
-                <div class="live-radio__aire--description" id="info">
-                    <div class="loadingio-spinner-pulse-8xm12tyxpn8"><div class="ldio-3k6tj0bxhgs">
+                    <div class="containImg" id="containImg">
+                    </div>
+                    <div class="live-radio__aire--description" id="info">
+                        <div class="loadingio-spinner-pulse-8xm12tyxpn8"><div class="ldio-3k6tj0bxhgs">
                         <div></div><div></div><div></div></div></div>
                     </div>
                 </div>
