--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
     <script src="./javaScript.js"></script>
     <script src="./variables.js"></script>
     <script src="https://kit.fontawesome.com/be0b6b45d6.js" crossorigin="anonymous"></script>
-    <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+    <!--<script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>-->
+    <script src="/javaScript/glide.min.js"></script>
     <!--<script>
         new Glide('.glide').mount()
       </script>-->
