--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
         
     </footer>
 
-    <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+    <!--<script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide" ></script>
     <script src="https://kit.fontawesome.com/be0b6b45d6.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./javaScript.js"></script>
