--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <!--<link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">-->
     <!-- Optional Theme Stylesheet -->
     <!--<link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">-->
-    <link rel="stylesheet" href="./css/glide.core.min.css">
-    <link rel="stylesheet" href="./css/glide.theme.min.css">
+    <link rel="stylesheet" href="./glide.core.min.css">
+    <link rel="stylesheet" href="./glide.theme.min.css">
 
    
     
