cambio de meta description

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     
     
     <title>Radio Ciudad de Sauce 90.5 | Un lugar para todos</title>
-    <meta name="description" content="🎧Estamos en el Aire❗ Radio Ciudad - Un lugar para Todos 🥇 Sauce Correintes">
+    <meta name="description" content="¿Aburrido de la misma radio de siempre? Sintoniza Radio Ciudad 90.5mhz y prepárate para disfrutar de la radio líder en Sauce Corrientes Argentina 🥇. Tenemos programas para todos los gustos: actualidad, noticias, entretenimiento y la mejor música. Desde el chamamé hasta el rock, pasando por la cumbia, el trap y el pop. Radio Ciudad 90.5mhz: un lugar para todos. 🎶📻🎶
+    ">
     <meta name="aplication-name" content="Radio Ciudad de Sauce 90.5 | Un lugar para todos">
     <!--<link rel="stylesheet" href="iconos/style.css">-->
     <link rel="stylesheet" href="./styles.css">
