Modificación de imagen para Open Graph

--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
     <meta property="og:title" content="Radio Ciudad 90.5 " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://radiociudad905.com.ar/" />
-    <meta property="og:image" content="https://radiociudad905.com.ar/img/movilWeb.jpg" />
-    <meta property="og:image" content="https://radiociudad905.com.ar/img/movilWeb2.jpg" />
+    <meta property="og:image" content="https://radiociudad905.com.ar/img/radiociudad.jpg" />
     <meta property="og:image" content="https://radiociudad905.com.ar/img/radioCiudadFacebook.jpg" />
-    <meta property="og:image" content="https://radiociudad905.com.ar/img/aTodaPotencia.jpg" />
     <meta property="og:description" content="¡Estamos en el Aire! Escuchanos en Vivo - Radio Ciudad - Sauce Corrientes 🥇" />
 
     <title>Radio Ciudad de Sauce 90.5 | Un lugar para todos</title>
