--- a/index.html
+++ b/index.html
@@ -150,19 +150,16 @@
                 </div>
               </ul>
             </div>
-
-            <div class="glide__arrows" data-glide-el="controls">
-              <i class="glide__arrow glide__arrow--left fa-solid fa-chevron-left" data-glide-dir="<"></i>
-              <i class="glide__arrow glide__arrow--right fa-solid fa-chevron-right" data-glide-dir=">"></i>
-            </div>
           </div>
 
-          <!--<video autoplay controls style="height: 40px; width: 100%">
-            <source src="http://stream.zeno.fm/afnx6011qtzuv" type="audio/aac" />
-          </video>-->
+          <audio controls autoplay preload="none">
+            <source src="http://uk18freenew.listen2myradio.com:21416/;" type="audio/mpeg" />
+            Tu navegador no soporta la reproducción.
+          </audio>
 
+          <!--
           <iframe style="padding: 0px" frameborder="0" src="https://player.raddios.com/widget/widgetresponsive.php?radio=14687&autoplay=0&lang=es&link=-radio-online-radio-ciudad-fm-905-sauce-argentina" width="100%" height="60" allowtransparency="true" scrolling="No"></iframe>
-        </div>
+        --></div>
       </div>
     </div>
     <div id="btnToggle" class="mensaje" data-aos="zoom-in" data-aos-delay="200">
