--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
 
           <audio controls autoplay preload="none">
-            <source src="https://fpsnew1.listen2myradio.com:2199/listen.php?ip=82.145.63.6&port=7162&type=s2&mount=1" type="audio/mpeg" />
+            <source src="http://radio01.ferozo.com:9460/stream" type="audio/mpeg" />
             Tu navegador no soporta la reproducción.
           </audio>
 
