--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
 
           <audio controls autoplay preload="none">
-            <source src="https://radio01.ferozo.com:9460/stream" type="audio/mpeg" />
+            <source src="http://radio01.ferozo.com:9460/stream" type="audio/mpeg" />
             Tu navegador no soporta la reproducción.
           </audio>
 
